# power-metric

./: MODULE_CATALOG.md  Paper_12_power_metric_rlhf.py  Paper_1_power_metric_training.py  Paper_2_power_metric_inference.py  Paper_4_power_metric_mixing.py  Paper_5_power_metric_lif_identity.py  Paper_6_power_metric_flash.py  Paper_9_power_metric_checkpoint (1).py  README.md  paper20_sweep.py  paper20_v3.py  power_metric_stack_paper_14.py  power_metric_verifier.py  visualize_result.py
code/: Paper_10_power_metric_speculative.py  Paper_11_power_metric_moe.py  Paper_13_Catastrophic.py  Paper_16_ingenious.py  Paper_18_Chain.py  Paper_18_Chain_UPDATED.py  Paper_3_power_metric_scaling.py  Paper_3_scaling_UPDATED.py  Paper_7_power_metric_hpo.py  Paper_8_power_metric_early_exit.py
experiments/: cover_vla_adaptive_k.py  cover_vla_episode_monitor.py  cover_vla_one_sided.py  cover_vla_simulator.py  extract_evals.py  extract_evals_v2.py  extract_evals_v3.py  extract_polypythia_final.py  inspect_schemas.py  paper7_variants.py  paper7_verification.py  pt_alpha_sweep.py  pt_alpha_sweep_multi.py  pt_meta_cusum.py  pt_offensive.py  pt_offensive_augmented.py  pt_offensive_augmented_v2.py  pt_offensive_checks.py  pt_offensive_paper3.py  pythia_verifications.py  resize.py  scout_evals.py  section3_multichain.py  section3_verification.py  section4_160m_check.py  section4_sharper.py  section4_verification.py
power_metric/: __init__.py  predictor.py  pyproject.toml  quickstart.py
